alterada a interface do login e do cadastro, adicionadas novas id's e classes

--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -18,30 +18,25 @@
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="centralizar_div">
-        <div class="div_centralizada">
+        <div class="div_centralizada_cadastro">
             <div class="barrazul_entrar"> <!-- Barra azul do fundo do "Cadastro" -->
                 <p class="fonte_entrar">Cadastro</p>
             </div>
             <div>
-                <div class="espacamento_login">
-                    <img class="icones" src="../imagens/user.png">
-                    <input value="Nome Completo" class="campo-registro">
+                <div class="espacamento_cadastro">
+                    <input placeholder="Nome Completo" id="campo_usuario">
                 </div>
-                <div>
-                    <img class="icones" src="../imagens/localizador-de-mapa.png">
-                    <input value="Cidade"class="campo-registro">
+                <div  class="espacamento_cadastro">
+                    <input placeholder="Cidade"id="campo_cidade">
                 </div>
-                <div>
-                    <img class="icones" src="../imagens/e-mail.png">
-                    <input value="Email" class="campo-registro">
+                <div class="espacamento_cadastro">
+                    <input placeholder="Email" id="campo_email">
                 </div>
-                <div>
-                    <img class="icones" src="../imagens/cadeado.png">
-                    <input value="Senha" class="campo-registro">
+                <div class="espacamento_cadastro">
+                    <input placeholder="Senha" id="campo_senha">
                 </div>
-                <div>
-                    <img class="icones" src="../imagens/graduate-cap.png">
-                    <select class="campo_registro">
+                <div class="espacamento_cadastro">
+                    <select id="campo_escolaridade">
                         <option>Selecione sua Escolaridade</option>
                         <option>Séries Iniciais</option>
                         <option>Séries Finais</option>
