--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -18,17 +18,15 @@
         <img class="engrenagem" src="../imagens/gear.png">
     </div>
     <div class="centralizar_div">
-        <div class="div_centralizada">
+        <div class="div_centralizada_login">
             <div class="barrazul_entrar">
                 <p class="fonte_entrar">Login</p>
             </div>
             <div class="espacamento_login">
-                <img class="icones" src="../imagens/user.png">
-                <input class="campo_registro" value="Usuário">
+                <input id="campo_usuario" placeholder="Usuário">
             </div>
             <div class="espacamento_login">
-                <img class="icones" src="../imagens/cadeado.png">
-                <input class="campo_registro" value="Senha">
+                <input placeholder="Senha" id="campo_senha">
                 <div class="textos_azuis">
                     <p>Esqueceu a senha?</p>
                 </div>
@@ -37,8 +35,7 @@
                 <button class="botao_entrar">Logar</button>
             </div>
             <div class="textos_azuis">
-                <p>Não tem conta?</p>
-                <p>Cadastre-se!</p> <!-- Textos links para fazer cadastro -->
+                <p>Não tem conta?</p> <!-- Textos links para fazer cadastro -->
             </div>
         </div>
     </div>
