--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -31,26 +31,26 @@
             <p> Nosso objetivo com esta aplicação é, juntamente ao Departamento de Trânsito (DETRAN) e a Prefeitura Municipal de Joinville, levar conhecimento para mudar valores, comportamentos e atitudes. </p>
         </div>
         <div class="fundo_vermelho">
-            <div class="todo_texto_daDiv"> 
+            <div class="todo_textodaDiv"> 
                 <p class="deixar_negrito"> Séries iniciais </p>
                 <p class="deixar_negrito"> (1º ao 5º ano) </p> </div>
-            <div id="posicao_imagem1"> <img id="tamanho_imagem1" src="../imagens/pare.png" ></div>
+            <div id="posicao_imagem1"> <img id="tamanho_imagem1" src="../imagens/pare.png" ></div><!--Revisar os tamanhos, tentar não usar position-->
         </div>
         <div class="fundo_amarelo">
-            <div class="todo_texto_daDiv"> 
+            <div class="todo_textodaDiv"> 
                 <p> Séries finais </p>
                 <p> (5º ao 9º ano) </p> 
             </div>
-            <div id="posicao_imagem2"> 
+            <div id="posicao_imagem2"> <!--Revisar os tamanhos, tentar não usar position-->
                 <img id="tamanho_imagem2" src="../imagens/cicli.png" >
             </div>
         </div>
         <div class="fundo_verde">
-            <div class="todo_texto_daDiv"> 
+            <div class="todo_textodaDiv">  
                 <p class="deixar_negrito"> Ensino Médio </p>
                 <p class="deixar_negrito"> (1º ao 3º ano) </p> 
             </div>
-            <div id="posicao_imagem3"> 
+            <div id="posicao_imagem3"> <!--Revisar os tamanhos, tentar não usar position-->
                 <img id="tamanho_imagem3" src="../imagens/youareateptran.png" >
             </div>
         </div>
