alteração no nome das imagens, funções novas criadas no javascript, html e o css foram incrementados.

--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -10,12 +10,12 @@
     <div class="barra_navegacao">
         <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <img class="imagem_maior_que" src="../imagens/maior_que.png">
         <p>EPTRAN</p>
-        <img class="imagem_maior_que" src="../imagens/maior-que.png">
-        <p>Login</p>
-        <img class="usuario_branco" src="../imagens/user.png">
-        <img class="engrenagem" src="../imagens/gear.png">
+        <img class="imagem_maior_que" src="../imagens/maior_que.png">
+        <p>Cadastro</p>
+        <img class="usuario_branco" src="../imagens/usuario.png">
+        <img class="engrenagem" src="../imagens/engrenagem.png">
     </div>
     <div class="centralizar_div">
         <div class="div_centralizada_cadastro">
@@ -26,7 +26,7 @@
                 <div class="espacamento_cadastro">
                     <input placeholder="Nome Completo" id="campo_usuario">
                 </div>
-                <div  class="espacamento_cadastro">
+                <div class="espacamento_cadastro">
                     <input placeholder="Cidade"id="campo_cidade">
                 </div>
                 <div class="espacamento_cadastro">
@@ -46,7 +46,9 @@
                 </div>
                 <div>
                     <button class="botao_entrar">CADASTRAR</button>
-                    <p class="textos_azuis">Já tem login?</p> <!-- Textos links para fazer login -->
+                    <div class="espacamento_links">
+                        <a class="textos_azuis" href="login.html">Já tem login?</p> <!-- Quando o usuário tem conta, clica aqui e vai pro login -->
+                    </div>
                 </div>
              </div>
         </div>
