--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -11,12 +11,12 @@
         <div class="barra_navegacao">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
             <p> Início</p>
-            <img class="imagem_maior_que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>EPTRAN</p>
-            <img class="imagem_maior_que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>Início</p>
-            <img class="usuario_branco" src="../imagens/user.png">
-            <img class="engrenagem" src="../imagens/gear.png">
+            <img class="usuario_branco" src="../imagens/usuario.png">
+            <img class="engrenagem" src="../imagens/engrenagem.png">
         </div>
         <div class="fundo_cinza"><!--Fundo desproporcional-->
             <p id="titulo_cabecalho">BEM-VINDO AO EPTRAN</p>
@@ -32,14 +32,14 @@
             </div> 
         </div>
         <div class="fundo_amarelo">
-            <img src="../imagens/cicli.png"><!--Imagem mal recortada-->
+            <img src="../imagens/placa_ciclista.png"><!--Imagem mal recortada-->
             <div>
                 <p>Séries finais</p>
                 <p>(6º ao 9º ano)</p>
             </div> 
         </div>
         <div class="fundo_verde">
-            <img class="placas" src="../imagens/youareateptran.png"> <!--Imagem mal recortada-->
+            <img class="placas" src="../imagens/placa_eptran.png"> <!--Imagem mal recortada-->
             <div class="series_branco">
                 <p>Ensino Médio</p>
                 <p>(1º ao 3º ano) </p>
