--- a/front-end/estrutura/menu.html
+++ b/front-end/estrutura/menu.html
@@ -13,12 +13,12 @@
         <div id="barrazul_menu">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
             <p> Início</p>
-            <img class="imagem_maior_que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>EPTRAN</p>
-            <img class="imagem_maior_que" src="../imagens/maior-que.png">
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>Início</p>
-            <img class="usuario_branco" src="../imagens/user.png">
-            <img class="engrenagem" src="../imagens/gear.png">
+            <img class="usuario_branco" src="../imagens/usuario.png">
+            <img class="engrenagem" src="../imagens/engrenagem.png">
         </div>
         <header> 
             <img class="fundo_cinza" src= "../imagens/capa.jpg">
@@ -61,11 +61,11 @@
             <hr id="barra_menu">
             <div>
                 <div class="flexivel">
-                    <img class="engrenagem_menu" src="../imagens/gear.png">
+                    <img class="engrenagem_menu" src="../imagens/engrenagem.png">
                     <p class="texto_menu"> CONFIGURAÇÕES</p>
                 </div>
                 <div class="flexivel">
-                    <img class="engrenagem_menu" src="../imagens/user.png">
+                    <img class="engrenagem_menu" src="../imagens/usuario.png">
                     <p class="texto_menu"> CONTA</p>
                 </div>
             </div>
