--- a/front-end/estrutura/Animacao.html
+++ b/front-end/estrutura/Animacao.html
@@ -9,16 +9,16 @@
     <div class="barra_navegacao">
         <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <img class="imagem_maior_que" src="../imagens/maior_que.png">
         <p>EPTRAN</p>
-        <img class="imagem_maior_que" src="../imagens/maior-que.png">
-        <p>Login</p>
-        <img class="usuario_branco" src="../imagens/user.png">
-        <img class="engrenagem" src="../imagens/gear.png">
+        <img class="imagem_maior_que" src="../imagens/maior_que.png">
+        <p>Séries Iniciais</p>
+        <img class="usuario_branco" src="../imagens/usuario.png">
+        <img class="engrenagem" src="../imagens/engrenagem.png">
     </div>
     <div class="div_mae">
         <div class="centralizar_animacao">
-            <img class="jogo" src="../imagens/JogoOne.png"> <!-- Imagem representativa do jogo -->
+            <img class="jogo" src="../imagens/animacao.png"> <!-- Imagem representativa do jogo -->
             <p class="animacao">Animação sobre o Trânsito!</p>
         </div>
     </div>
