--- a/front-end/estrutura/Jogo.html
+++ b/front-end/estrutura/Jogo.html
@@ -9,17 +9,17 @@
     <div class="barra_navegacao">
         <img class="imagem_tres_barras" src="../imagens/menu.png">
         <p> Início</p>
-        <img class="imagem_maior_que" src="../imagens/maior-que.png">
+        <img class="imagem_maior_que" src="../imagens/maior_que.png">
         <p>EPTRAN</p>
-        <img class="imagem_maior_que" src="../imagens/maior-que.png">
-        <p>Início</p>
-        <img class="usuario_branco" src="../imagens/user.png">
-        <img class="engrenagem" src="../imagens/gear.png">
+        <img class="imagem_maior_que" src="../imagens/maior_que.png">
+        <p>Séries Finais</p>
+        <img class="usuario_branco" src="../imagens/usuario.png">
+        <img class="engrenagem" src="../imagens/engrenagem.png">
     </div>
     <div class="div_mae">
         <div class="centralizar_animacao">
             <a class="texto_jogo">Jogo sobre o Trânsito</a>
-            <img class="jogo" src="../imagens/JogoTwo.png">
+            <img class="jogo" src="../imagens/jogo.png">
             <img class="tamanho_ideal_controle" src="../imagens/controle.png"> <!-- Ícones de som, gamepad e aumentar tela do jogo -->
             <img class="tamanho_ideal_expandir"src="../imagens/Expandir.png">
             <img class="tamanho_ideal_volume" src="../imagens/Volume.png">
