--- a/front-end/estrutura/capa.html
+++ b/front-end/estrutura/capa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
+    <script src="../scripts/script.js"></script>
     <title>Bem-vindo ao EPTRAN</title>
 </head>
 <body id="fundo_azul_capa">
@@ -30,8 +31,8 @@
         <div id="circulo_capa_da_foca"></div>
     </div>
     <div id="centralizar_botao_capa">
-        <button class="botao_entrar_capa">ENTRAR</button>
-        <button class="botao_cadastrar_capa">CADASTRAR</button>    
+        <button class="botao_entrar_capa" onclick="site_login()">ENTRAR</button>
+        <button class="botao_cadastrar_capa" onclick="site_cadastro()">CADASTRAR</button>    
     </div>
 </body>
 </html>
