alterações nos campos do login e cadastro, mudanças visuais no css

--- a/front-end/estrutura/cadastro.html
+++ b/front-end/estrutura/cadastro.html
@@ -37,11 +37,11 @@
                 </div>
                 <div class="espacamento_cadastro">
                     <select id="campo_escolaridade">
-                        <option>Selecione sua Escolaridade</option>
+                        <option>Escolaridade</option>
                         <option>Séries Iniciais</option>
                         <option>Séries Finais</option>
                         <option>Ensino Médio</option>
-                        <option>Ensino Superior</option>
+                        <option>Outros</option>
                     </select>
                 </div>
                 <div>
