--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -13,46 +13,47 @@
             <p> Início</p>
             <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>EPTRAN</p>
-            <img class="imagem_maior_que" src="../imagens/maior_que.png">
-            <p>Início</p>
             <img class="usuario_branco" src="../imagens/usuario.png">
             <img class="engrenagem" src="../imagens/engrenagem.png">
         </div>
-        <div class="fundo_cinza"><!--Fundo desproporcional-->
-            <p id="titulo_cabecalho">BEM-VINDO AO EPTRAN</p>
-        </div>
-        <div id="texto_introducao">
-            <p> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
-        </div>
-        <div class="fundo_vermelho">
-            <img class="placas" src="../imagens/pare.png" >
-            <div class="series_branco">
-                <p>Séries iniciais</p>
-                <p>(1º ao 5º ano)</p>
-            </div> 
-        </div>
-        <div class="fundo_amarelo">
-            <img src="../imagens/placa_ciclista.png"><!--Imagem mal recortada-->
-            <div>
-                <p>Séries finais</p>
-                <p>(6º ao 9º ano)</p>
-            </div> 
-        </div>
-        <div class="fundo_verde">
-            <img class="placas" src="../imagens/placa_eptran.png"> <!--Imagem mal recortada-->
-            <div class="series_branco">
-                <p>Ensino Médio</p>
-                <p>(1º ao 3º ano) </p>
-            </div> 
-        </div>
-        <footer class="rodape">
-            <div>
-                <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+            
+        <section>
+            <div id="capa_inicio"><!--Fundo desproporcional-->
+                <p id="titulo_cabecalho">BEM-VINDO</p>
             </div>
-            <div class="display_footer">
-                <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
-                <img class="logo_projeto" src="../imagens/logo_eptran.png">
+            <div id="texto_introducao">
+                <p id="introducao_texto_2"> O Eptran (Escola Pública de Trânsito) é o órgão responsável pela realização de campanhas, palestras, ações e projetos educacionais ligados à segurança e mobilidade no trânsito. </p>
             </div>
-        </footer>
+            <div class="fundo_vermelho">
+                <img class="placas" src="../imagens/pare.png" >
+                <div class="series_branco">
+                    <p>Séries iniciais</p>
+                    <p>(1º ao 5º ano)</p>
+                </div> 
+            </div>
+            <div class="fundo_amarelo">
+                <img id="placa_ciclista" src="../imagens/Placa-A-30B-Passagem-sinalizada-de-ciclistas.png"><!--Imagem mal recortada-->
+                <div>
+                    <p>Séries finais</p>
+                    <p>(6º ao 9º ano)</p>
+                </div> 
+            </div>
+            <div class="fundo_verde">
+                <img class="placas" src="../imagens/VOCÊ ESTÁ NO EPTRAN (1).png"> <!--Imagem mal recortada-->
+                <div class="series_branco">
+                    <p>Ensino Médio</p>
+                    <p>(1º ao 3º ano) </p>
+                </div> 
+            </div>
+            <footer class="rodape">
+                <div>
+                    <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+                </div>
+                <div class="display_footer">
+                    <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+                    <img class="logo_projeto" src="../imagens/logo_eptran.png">
+                </div>
+            </footer>
+        </section>
     </body> 
 </html>
