Arrumado oa barra de navegação

--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -8,7 +8,7 @@
         <title>Tela de Início EPTRAN</title>
     </head>
     <body>
-        <div class="barra_navegacao">
+        <div id="barra_navegacao_inicio">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
             <p> Início</p>
             <img class="imagem_maior_que" src="../imagens/maior_que.png">
