Eu arrumei as posição corretamente, e arrumei os textos das placas das séries.

--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -8,12 +8,12 @@
         <title>Tela de Início EPTRAN</title>
     </head>
     <body>
-        <div id="barra_navegacao_inicio">
+        <div class="barra_navegacao">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
             <p> Início</p>
             <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>EPTRAN</p>
-            <img class="usuario_branco" src="../imagens/usuario.png">
+            <img class="usuario_branco_inicio" src="../imagens/usuario.png">
             <img class="engrenagem" src="../imagens/engrenagem.png">
         </div>
             
@@ -26,20 +26,20 @@
             </div>
             <div class="fundo_vermelho">
                 <img class="placas" src="../imagens/pare.png" >
-                <div class="series_branco">
+                <div class="series_branco_vermelho">
                     <p>Séries iniciais</p>
                     <p>(1º ao 5º ano)</p>
                 </div> 
             </div>
             <div class="fundo_amarelo">
                 <img id="placa_ciclista" src="../imagens/Placa-A-30B-Passagem-sinalizada-de-ciclistas.png"><!--Imagem mal recortada-->
-                <div>
+                <div class="series_branco_amarelo">
                     <p>Séries finais</p>
                     <p>(6º ao 9º ano)</p>
                 </div> 
             </div>
             <div class="fundo_verde">
-                <img class="placas" src="../imagens/VOCÊ ESTÁ NO EPTRAN (1).png"> <!--Imagem mal recortada-->
+                <img class="placa_voce_esta_no_eptran" src="../imagens/VOCÊ ESTÁ NO EPTRAN (1).png"> <!--Imagem mal recortada-->
                 <div class="series_branco">
                     <p>Ensino Médio</p>
                     <p>(1º ao 3º ano) </p>
