criada a página series_iniciais e excluida a jogo e animação

--- a/front-end/estrutura/series_iniciais.html
+++ b/front-end/estrutura/series_iniciais.html
@@ -1,9 +1,10 @@
-<html lang="pt-br">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>series_iniciais</title>
     <link rel="stylesheet" href="../style/style.css" />
-    <title>EPTRAN</title>
 </head>
 <body>
     <div class="barra_navegacao">
@@ -12,14 +13,13 @@
         <img class="imagem_maior_que" src="../imagens/maior_que.png">
         <p>EPTRAN</p>
         <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p>Séries Iniciais</p>
-        <img class="usuario_branco" src="../imagens/usuario.png">
+        <p>Series Iniciais</p>
+        <img id="usuario_branco_series" src="../imagens/usuario.png">
         <img class="engrenagem" src="../imagens/engrenagem.png">
     </div>
-    <div class="div_mae">
-        <div class="centralizar_animacao">
-            <img class="jogo" src="../imagens/animacao.png"> <!-- Imagem representativa do jogo -->
-            <p class="animacao">Animação sobre o Trânsito!</p>
+    <div class="centralizar_div">
+        <div class="jogo_cinza">
+            <button class="botao_entrar">Jogar</button>
         </div>
     </div>
     <footer class="rodape">
