--- a/front-end/estrutura/series_iniciais.html
+++ b/front-end/estrutura/series_iniciais.html
@@ -19,7 +19,11 @@
     </div>
     <div class="centralizar_div">
         <div class="jogo_cinza">
+            <p>JOGO DA MEMÓRIA</p>
+            <p>Torne-se um mestre no trânsito</p>
+            <img id="ideia" src="../imagens/ideia.png">
             <button class="botao_entrar">Jogar</button>
+            <img id="menina_pensativa" src="../imagens/menina_pensativa.png">
         </div>
     </div>
     <footer class="rodape">
