ajustando tela de inicio

--- a/front-end/estrutura/capa.html
+++ b/front-end/estrutura/capa.html
@@ -9,7 +9,7 @@
 </head>
 <body id="fundo_azul_capa">
     <div>
-        <p class="centro_eptran_capa">BEM-VINDO AO EPTRAN</p>
+        <a class="centro_eptran_capa">BEM-VINDO AO EPTRAN</a>
     </div>
     <div id="altura_div_da_capa">
         <div class="texto_lado_a_lado">
@@ -20,7 +20,7 @@
         <div class="texto_lado_a_lado_dois">
             <p class="texto_capa_aprender_trânsito">tarde para</p>
             <p class="cor_amarela_capa_aprender">aprender</p>
-            <p class="texto_capa_aprender_trânsito">, sobre o</p>
+            <p class="texto_capa_aprender_trânsito">‎ sobre o</p>
         </div>
         <div class="texto_lado_a_lado_tres">
             <p class="cor_vermelho_capa_texto">trânsito</p>
