pagina do Ensino Médio finalizada. Só falta a fonte no texto

--- a/front-end/estrutura/ensino_medio.html
+++ b/front-end/estrutura/ensino_medio.html
@@ -22,7 +22,14 @@
             <div class="jogo_cinza">
                 <p> JOGO DAS ESCOLHAS</p>
                 <p> Controle sua vida no trânsito!</p>
-                <button class="botao_entrar">JOGAR</button>
+                <div class="botao_ensino_medio">
+                    <button class="botao_entrar">JOGAR</button>
+                </div>
+                <div id="imagens_jogo_ensino_medio">
+                    <img id="icone_certo" src="../imagens/certo.png">
+                    <img id="homem_escolhendo" src="../imagens/homem-hesitante-e-sem-nocao-cruza-as-maos-sobre-o-peito-indica-com-o-dedo-indicador-em-diferentes-lados-ou-direcoes.png">
+                    <img id="icone_errado" src="../imagens/errado.png">
+                </div>
             </div>
         </div>
     </section>
