finalizada a pagina do jogo do Ensino Médio, e arrumei a foto da Séries Iniciais

--- a/front-end/estrutura/ensino_medio.html
+++ b/front-end/estrutura/ensino_medio.html
@@ -21,7 +21,7 @@
         <div class="centralizar_div">
             <div class="jogo_cinza">
                 <p> JOGO DAS ESCOLHAS</p>
-                <p> Controle sua vida no trânsito!</p>
+                <p class="subtitulo_jogos"> Controle sua vida no trânsito!</p>
                 <div class="botao_ensino_medio">
                     <button class="botao_entrar">JOGAR</button>
                 </div>
@@ -33,5 +33,12 @@
             </div>
         </div>
     </section>
+    <footer class="rodape">
+        <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
+        <div class="display_footer">
+            <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
+            <img class="logo_projeto" src="../imagens/logo_eptran.png">
+        </div>
+    </footer>
 </body>
 </html>
