--- a/front-end/estrutura/series_iniciais.html
+++ b/front-end/estrutura/series_iniciais.html
@@ -21,7 +21,7 @@
         <div class="jogo_cinza">
             <div>
                 <p>JOGO DA MEMÓRIA</p>
-                <p>Torne-se um mestre no trânsito</p>
+                <p class="subtitulo_jogos">Torne-se um mestre no trânsito</p>
                 <img id="ideia" src="../imagens/ideia.png">
             </div>
             <button class="botao_entrar">Jogar</button>
