continuando series finais

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -18,10 +18,12 @@
     <div class="centralizar_div">
         <div id="fundoCinzaJogoSF">
             <div id="tituloEsubtitulo">
-                <div  id="tituloSF"><a> JOGO DAS ESCOLHAS</a></div>
-                <div id="subtituloSF"><a> Controle suas ações no trânsito!</a></div>
+                <div  id="tituloSF"><a> JOGO DOS SETE ERROS</a></div>
+                <div id="subtituloSF"><a> Descubra o que não fazer no trânsito!</a></div>
             </div>
-            <img id="mulherMedrosa" src="../imagens/mulher_com_medo.png" alt="">
+            <button class="botao_entrar">Jogar</button>
+            <img id="mulherMedrosa" src="../imagens/mulher_com_medo.png">
+            <img id="atencao" src="../imagens/atention.png" >
         </div>
     </div>
     <footer class="rodape">
