página séries finais finalizada

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -19,11 +19,13 @@
         <div id="fundoCinzaJogoSF">
             <div id="tituloEsubtitulo">
                 <div  id="tituloSF"><a> JOGO DOS SETE ERROS</a></div>
-                <div id="subtituloSF"><a> Descubra o que não fazer no trânsito!</a></div>
+                <div id="subtituloSF"><a> Mostre o que não fazer no trânsito!</a></div>
             </div>
-            <button class="botao_entrar">Jogar</button>
+            <div class="botao_SF">
+                <button class="botao_entrar">JOGAR</button>
+            </div>
             <img id="mulherMedrosa" src="../imagens/mulher_com_medo.png">
-            <img id="atencao" src="../imagens/atention.png" >
+            <img id="atencaoSF" src="../imagens/atention.png" >
         </div>
     </div>
     <footer class="rodape">
