arrumando barra de navegação

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -7,25 +7,23 @@
     </head>
     <div class="barra_navegacao">
         <img class="imagem_tres_barras" src="../imagens/menu.png">
-        <p> Início</p>
+        <a class="links_barra" href="inicio.html"> Início</a>
         <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p>EPTRAN</p>
-        <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p>Séries Finais</p>
+        <p >Séries Finais</p>
             <img id="usuario_branco_7erros_ajustar" src="../imagens/usuario.png">
             <img class="engrenagem" src="../imagens/engrenagem.png">
     </div>
     <div class="centralizar_div">
-        <div id="fundoCinzaJogoSF">
-            <div id="tituloEsubtitulo">
-                <div  id="tituloSF"><a> JOGO DOS SETE ERROS</a></div>
-                <div id="subtituloSF"><a> Mostre o que não fazer no trânsito!</a></div>
+        <div id="fundo_cinza_jogo_SF">
+            <div id="titulo_e_subtitulo">
+                <div  id="titulo_SF"><a> JOGO DOS SETE ERROS</a></div>
+                <div id="subtitulo_SF"><a> Mostre o que não fazer no trânsito!</a></div>
             </div>
             <div class="botao_SF">
                 <button class="botao_entrar">JOGAR</button>
             </div>
-            <img id="mulherMedrosa" src="../imagens/mulher_com_medo.png">
-            <img id="atencaoSF" src="../imagens/atention.png" >
+            <img id="mulher_medrosa" src="../imagens/mulher_com_medo.png">
+            <img id="atencao_SF" src="../imagens/atention.png" >
         </div>
     </div>
     <footer class="rodape">
