--- a/front-end/estrutura/series_iniciais.html
+++ b/front-end/estrutura/series_iniciais.html
@@ -9,9 +9,7 @@
 <body>
     <div class="barra_navegacao">
         <img class="imagem_tres_barras" src="../imagens/menu.png">
-        <p> Início</p>
-        <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p>EPTRAN</p>
+        <a class="links_barra" href="inicio.html"> Início</a>
         <img class="imagem_maior_que" src="../imagens/maior_que.png">
         <p>Series Iniciais</p>
         <img id="usuario_branco_series" src="../imagens/usuario.png">
@@ -20,7 +18,7 @@
     <div class="centralizar_div">
         <div class="jogo_cinza">
             <div>
-                <p>JOGO DA MEMÓRIA</p>
+                <p id="titulo_SF">JOGO DA MEMÓRIA</p>
                 <p class="subtitulo_jogos">Torne-se um mestre no trânsito</p>
                 <img id="ideia" src="../imagens/ideia.png">
             </div>
