--- a/front-end/estrutura/ensino_medio.html
+++ b/front-end/estrutura/ensino_medio.html
@@ -9,9 +9,7 @@
 <body>
     <div class="barra_navegacao">
         <img class="imagem_tres_barras" src="../imagens/menu.png">
-        <p> Início</p>
-        <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p>EPTRAN</p>
+        <a class="links_barra" href="inicio.html"> Início</a>
         <img class="imagem_maior_que" src="../imagens/maior_que.png">
         <p>Ensino Médio</p>
         <img id="usuario_branco_ensino_medio" src="../imagens/usuario.png">
@@ -20,7 +18,7 @@
     <section>
         <div class="centralizar_div">
             <div class="jogo_cinza">
-                <p> JOGO DAS ESCOLHAS</p>
+                <p id="titulo_SF"> JOGO DAS ESCOLHAS</p>
                 <p class="subtitulo_jogos"> Controle sua vida no trânsito!</p>
                 <div class="botao_ensino_medio">
                     <button class="botao_entrar">JOGAR</button>
