--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -9,12 +9,15 @@
     </head>
     <body>
         <div class="barra_navegacao">
-            <img class="imagem_tres_barras" src="../imagens/menu.png">
-            <p> Início</p>
-            <img class="usuario_branco_inicio" src="../imagens/usuario.png">
-            <img class="engrenagem" src="../imagens/engrenagem.png">
+            <div class="elementos_esquerda">
+                <img class="imagem_tres_barras" src="../imagens/menu.png">
+                <p> Início</p>
+            </div>
+            <div class="icones_direita">
+                <img class="usuario_branco" src="../imagens/usuario.png">
+                <img class="engrenagem" src="../imagens/engrenagem.png">
+            </div>
         </div>
-            
         <section>
             <div id="capa_inicio"><!--Fundo desproporcional-->
                 <p id="titulo_cabecalho">BEM-VINDO</p>
