--- a/front-end/estrutura/series_iniciais.html
+++ b/front-end/estrutura/series_iniciais.html
@@ -8,12 +8,16 @@
 </head>
 <body>
     <div class="barra_navegacao">
-        <img class="imagem_tres_barras" src="../imagens/menu.png">
-        <a class="links_barra" href="inicio.html"> Início</a>
-        <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p>Series Iniciais</p>
-        <img id="usuario_branco_series" src="../imagens/usuario.png">
-        <img class="engrenagem" src="../imagens/engrenagem.png">
+        <div class="elementos_esquerda">
+            <img class="imagem_tres_barras" src="../imagens/menu.png">
+            <p> Início</p>
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
+            <p>Séries Iniciais</p>
+        </div>
+        <div class="icones_direita">
+            <img class="usuario_branco" src="../imagens/usuario.png">
+            <img class="engrenagem" src="../imagens/engrenagem.png">
+        </div>
     </div>
     <div class="centralizar_div">
         <div class="jogo_cinza">
