--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <div class="barra_navegacao">
-        <img class="imagem_tres_barras" src="../imagens/menu.png">
-        <p>Login</p>
-        <img class="usuario_branco" src="../imagens/usuario.png">
-        <img class="engrenagem" src="../imagens/engrenagem.png">
+        <div class="elementos_esquerda">
+            <img class="imagem_tres_barras" src="../imagens/menu.png">
+            <p> Início</p>
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
+            <p>Login</p>
+        </div>
+        <div class="icones_direita">
+            <img class="usuario_branco" src="../imagens/usuario.png">
+            <img class="engrenagem" src="../imagens/engrenagem.png">
+        </div>
     </div>
     <div class="centralizar_div">
         <div class="div_centralizada_login">
