--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -6,12 +6,16 @@
         <title> Séries Finais</title>
     </head>
     <div class="barra_navegacao">
-        <img class="imagem_tres_barras" src="../imagens/menu.png">
-        <a class="links_barra" href="inicio.html"> Início</a>
-        <img class="imagem_maior_que" src="../imagens/maior_que.png">
-        <p >Séries Finais</p>
-            <img id="usuario_branco_7erros_ajustar" src="../imagens/usuario.png">
+        <div class="elementos_esquerda">
+            <img class="imagem_tres_barras" src="../imagens/menu.png">
+            <p> Início</p>
+            <img class="imagem_maior_que" src="../imagens/maior_que.png">
+            <p>Séries Finais</p>
+        </div>
+        <div class="icones_direita">
+            <img class="usuario_branco" src="../imagens/usuario.png">
             <img class="engrenagem" src="../imagens/engrenagem.png">
+        </div>
     </div>
     <div class="centralizar_div">
         <div id="fundo_cinza_jogo_SF">
