conectando abas na barra de navegação

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -8,7 +8,7 @@
     <div class="barra_navegacao">
         <div class="elementos_esquerda">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
-            <p> Início</p>
+            <a class="inicio_botao" href="inicio.html"> Início </a href="inicio.html">
             <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>Séries Finais</p>
         </div>
