--- a/front-end/estrutura/ensino_medio.html
+++ b/front-end/estrutura/ensino_medio.html
@@ -10,7 +10,7 @@
     <div class="barra_navegacao">
         <div class="elementos_esquerda">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
-            <p> Menu</p>
+            <a class="inicio_botao" href="inicio.html"> Início </a href="inicio.html">
             <img class="imagem_maior_que" src="../imagens/maior_que.png">
             <p>Ensino Médio</p>
         </div>
