adicionei o script em todas as páginas

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="../style/style.css" />
         <title> Séries Finais</title>
     </head>
+    <body>
     <div class="barra_navegacao">
         <div class="elementos_esquerda">
             <img class="imagem_tres_barras" src="../imagens/menu.png">
@@ -39,4 +40,6 @@
             <img class="logo_projeto" src="../imagens/logo_eptran.png">
         </div>
     </footer>
+    </body>
+    <script src="../scripts/script.js"></script> 
 </html>
