Mudei a placa de Transito das series finais e coloquei hiperlink para cada texo das series.

--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -27,22 +27,22 @@
             <div class="fundo_vermelho">
                 <img class="placas" src="../imagens/pare.png" >
                 <div class="series_branco_vermelho">
-                    <p>Séries iniciais</p>
-                    <p>(1º ao 5º ano)</p>
+                    <a class="textos_branco" href="../estrutura/series_iniciais.html">Séries iniciais</a>
+                    <a class="textos_branco" href="../estrutura/series_iniciais.html">(1º ao 5º ano)</a>
                 </div> 
             </div>
             <div class="fundo_amarelo">
-                <img id="placa_ciclista" src="../imagens/Placa-A-30B-Passagem-sinalizada-de-ciclistas.png"><!--Imagem mal recortada-->
+                <img id="placa_ciclista" src="../imagens/placa_ciclista.png"><!--Imagem mal recortada-->
                 <div class="series_branco_amarelo">
-                    <p>Séries finais</p>
-                    <p>(6º ao 9º ano)</p>
+                    <a class="textos_preto" href="../estrutura/serie_finais.html">Séries finais</a>
+                    <a class="textos_preto" href="../estrutura/serie_finais.html">(6º ao 9º ano)</a>
                 </div> 
             </div>
             <div class="fundo_verde">
                 <img class="placa_voce_esta_no_eptran" src="../imagens/VOCÊ ESTÁ NO EPTRAN (1).png"> <!--Imagem mal recortada-->
                 <div class="series_branco">
-                    <p>Ensino Médio</p>
-                    <p>(1º ao 3º ano) </p>
+                    <a class="textos_branco" href="../estrutura/ensino_medio.html">Ensino Médio</a>
+                    <a class="textos_branco" href="../estrutura/ensino_medio.html">(1º ao 3º ano) </a>
                 </div> 
             </div>
             <footer class="rodape">
