Começado o menu interativo nas paginas

--- a/front-end/estrutura/inicio.html
+++ b/front-end/estrutura/inicio.html
@@ -56,6 +56,26 @@
                 </div>
             </footer>
         </section>
+        <div id="aba_menu">
+            <img class="imagem_tres_barras_menu" src="../imagens/menu.png">
+            <div class="menu_suspenso">
+                <p class="texto_menu_select"> EPTRAN </p>
+                <p class="texto_menu"> SÉRIES INICIAIS</p>
+                <p class="texto_menu"> SÉRIES FINAIS</p>
+                <p class="texto_menu"> ENSINO MÉDIO</p>
+            </div>
+            <hr id="barra_menu">
+            <div>
+                <div class="flexivel">
+                    <img class="engrenagem_menu" src="../imagens/engrenagem.png">
+                    <p class="texto_menu"> CONFIGURAÇÕES</p>
+                </div>
+                <div class="flexivel">
+                    <img class="engrenagem_menu" src="../imagens/usuario.png">
+                    <p class="texto_menu"> CONTA</p>
+                </div>
+            </div>
+        </div>
     </body>
     <script src="../scripts/script.js"></script> 
 </html>
