jogos finalizados e começando a construir a parte das inormações

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -26,25 +26,28 @@
                     <div id="subtitulo_SF"><a> Mostre o que fazer no trânsito!</a></div>
                 </div>
                 <div class="jogos_SF" >
-                    <div class="fundo_azul_sete_erros">
+                    <div class="fundo_azul_jogos">
                         <img id="sete_erros_capa" src="../imagens/sete erros capa.png">
                         <div class="canto_direito_SF">
-                            <a class="titulo_7_erros"> JOGO DOS SETE ERROS</a>
+                            <a class="titulo_jogos_SF"> JOGO DOS SETE ERROS</a>
                             <button class="botao_entrar">Jogar</button>
                         </div>
                     </div>
-                    <div class="fundo_azul_quiz">
+                    <div class="fundo_azul_jogos">
                         <div class="canto_direito_SF">
-                            <a class="titulo_7_erros"> JOGO DOS SETE ERROS</a>
+                            <a class="titulo_jogos_SF"> QUIZ DO TRÂNSITO</a>
                             <button class="botao_entrar">Jogar</button>
                         </div>
-                        <img id="quiz_capa" src="../imagens/">
+                        <img id="quiz_capa" src="../imagens/quiz.png">
                     </div>
                 </div>
             </section>
         </div> 
-    </body>
-    
+        <section class="fundo_cinza_infos_SF">
+            <div id="infos">
+                <a> INFORMAÇÕES</a>
+            </div>
+        </section>
     <footer class="rodape">
         <div>
             <img class="cidade_rodape" src="../imagens/cidade_rodape_Iphone14.png">
