adicionei o menu em todas as abas e já é possível abrir e fechar o menu.

--- a/front-end/estrutura/serie_finais.html
+++ b/front-end/estrutura/serie_finais.html
@@ -56,6 +56,25 @@
             <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
             <img class="logo_projeto" src="../imagens/logo_eptran.png">
         </div>
+        <div id="aba_menu">
+            <div class="menu_suspenso">
+                <p class="texto_menu_select"> EPTRAN </p>
+                <p class="texto_menu"> SÉRIES INICIAIS</p>
+                <p class="texto_menu"> SÉRIES FINAIS</p>
+                <p class="texto_menu"> ENSINO MÉDIO</p>
+            </div>
+            <hr id="barra_menu">
+            <div>
+                <div class="flexivel">
+                    <img class="engrenagem_menu" src="../imagens/engrenagem.png">
+                    <p class="texto_menu"> CONFIGURAÇÕES</p>
+                </div>
+                <div class="flexivel">
+                    <img class="engrenagem_menu" src="../imagens/usuario.png">
+                    <p class="texto_menu"> CONTA</p>
+                </div>
+            </div>
+        </div>
     </footer>
     </body>
     <script src="../scripts/script.js"></script> 
