--- a/front-end/estrutura/login.html
+++ b/front-end/estrutura/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css"/>
-    <script src="../scripts/script.js"></script>
     <title>Entrar no EPTRAN</title>
 </head>
 <body>
@@ -45,6 +44,25 @@
         <div class="display_footer">
             <img class="logo_prefeitura" src="../imagens/Prefeitura.png">
             <img class="logo_projeto" src="../imagens/logo_eptran.png">
+        </div>
+        <div id="aba_menu">
+            <div class="menu_suspenso">
+                <p class="texto_menu_select"> EPTRAN </p>
+                <p class="texto_menu"> SÉRIES INICIAIS</p>
+                <p class="texto_menu"> SÉRIES FINAIS</p>
+                <p class="texto_menu"> ENSINO MÉDIO</p>
+            </div>
+            <hr id="barra_menu">
+            <div>
+                <div class="flexivel">
+                    <img class="engrenagem_menu" src="../imagens/engrenagem.png">
+                    <p class="texto_menu"> CONFIGURAÇÕES</p>
+                </div>
+                <div class="flexivel">
+                    <img class="engrenagem_menu" src="../imagens/usuario.png">
+                    <p class="texto_menu"> CONTA</p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
